# multiagent

./: .env.example  .gitignore  README.md  eng-auto-loop.md  exps-auto-analyze.md  kjobs-compute.yaml  pyproject.toml
.claude/commands/: eng-auto-debug.md  eng-auto-execute.md  eng-auto-loop.md  eng-auto-plan.md  exps-auto-analyze.md  exps-auto-execute.md  exps-auto-loop.md  exps-auto-plan.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: batch_config.yaml  pipeline.yaml  pipeline_math.yaml
config/problems/: example.yaml
configs/: __init__.py  _image_reuse.py  agent_config.yaml  cooperbench_default.yaml  math_debate_grpo.run  model_profiles.py  sweep_math_baseline_grpo.py  sweep_math_debate_grpo.py  sweep_math_debate_multimodel_grpo.py
cooperbench-eval/: pyproject.toml
cooperbench-eval/src/: __init__.py  cli.py  main.py
cooperbench-eval/src/classifiers/: __init__.py  base.py  placeholder_misuse.py  repetition.py  unresponsiveness.py  work_overlap.py
cooperbench-eval/src/data_loading/: __init__.py  loader.py  schemas.py  trajectory_loader.py
cooperbench-eval/src/llm_judge/: __init__.py  base.py  broken_commitment.py  dependency_access.py  divergent_architecture.py  parameter_flow.py  timing_dependency.py  unverifiable_claims.py
cooperbench-eval/src/report/: __init__.py  generator.py
cooperbench-eval/tests/: conftest.py  test_cli.py  test_data_loading.py  test_heuristic_classifiers.py  test_integration.py  test_llm_classifiers.py  test_report.py
data/: fig4_metrics.json  fig5_metrics.json  fig6_metrics.json  qualitative_metrics.json  results.json  sample_trajectories.jsonl
docs/: flink-logging-investigation.md
experiments/: 12_cooperbench_repro.md
run_configs/: cooperbench_lite.run  llama_1b_rloo_math.run  qwen3_4b_cooperbench.run  qwen3_4b_cooperbench_2gpu.run  qwen3_4b_cooperbench_4gpu.run  qwen3_4b_cooperbench_6gpu.run  smollm_135m_rloo_math.run
scripts/: analyze_fig4.py  analyze_fig5.py  analyze_fig6.py  analyze_qualitative.py  collect_results.py  compare_baseline.py  compare_experiments.py  convert_cooperbench_to_inspect.py  convert_to_inspect.py  create_wandb_dashboard.py  eval_cooperbench.py  evaluate_checkpoints.py  generate_fig4.py  generate_fig5.py  generate_fig6.py  generate_phase1_figures.py  generate_trajectories.py  launch_integration_tests.sh  launch_training.py  paper_baselines.py  pull_images.sh  run_cooperbench.sh  run_experiment_batch.py  run_training.sh  setup_cooperbench.sh  submit_reward_shaping_sweep.py
src/: __init__.py
streamlit_viewer/: __init__.py  app.py  config.py
tests/: __init__.py  conftest.py  test_baseline.py  test_batch_executor.py  test_bee_eval.py  test_best_of_n.py  test_checkpoint_format.py  test_cli.py  test_cluster_paths.py  test_coma_advantage.py  test_comb_converter.py  test_comb_math_debate_env.py  test_comparison.py  test_cooperbench_inspect.py  test_cooperbench_loader.py  test_cooperbench_models.py  test_data_loader.py  test_debate_metrics.py  test_debate_parser.py  test_debate_streamer.py  test_debug_data_writer.py  test_difference_rewards.py  test_distributed_executor.py  test_dual_learner.py  test_dual_rewards.py  test_evaluation.py  test_grpo_role_loss.py  test_infrastructure.py  test_inspect_logging.py  test_marti_export.py  test_math500.py  test_models.py  test_multi_model_config.py  test_multi_model_sweep.py  test_pipeline.py  test_potential_shaping.py  test_ray_training_executor.py  test_reproducibility.py  test_reward_calculator.py  test_reward_mixing.py  (+15 more)
tools/: convert_hf_to_fax.py  parse_sweep_logs.py  patch_llama_tokenizer.py  validate_wandb_run.py
(+203 files in other folders)
