[project]
name = "multiagent"
version = "0.1.0"
description = "Multi-agent inference pipeline with solver, verifier, and judge agents"
authors = [{name = "Terry Tong", email = "terry@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.81.6",
    "pydantic>=2.12.5",
    "cohere>=5.20.2",
    "instructor>=1.14.5",
    "tenacity>=9.0",
    "loguru>=0.7",
    "rich>=14.1.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "sympy>=1.13",
    "datasets>=3.2.0",
    "jsonlines>=4.0.0",
    "pydantic-yaml>=1.6.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
distributed = ["kubernetes>=28.0"]
training = ["torch>=2.0", "transformers>=4.40", "wandb>=0.16", "accelerate>=0.30"]
viewer = ["streamlit>=1.32.0", "plotly>=5.19.0", "pandas>=2.2.0", "pyarrow>=15.0.0"]

[dependency-groups]
dev = [
    "ruff>=0.8.5",
    "mypy>=1.13",
    "pytest>=8.2",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
markers = [
    "cluster: tests requiring GCS/cluster access (deselect with '-m not cluster')",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
