[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cooperbench-eval"
version = "0.1.0"
description = "Automated failure mode classification for CooperBench multi-agent coding traces"
requires-python = ">=3.12"
dependencies = [
    "unidiff>=0.7.5",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[project.scripts]
cooperbench-eval = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"
