[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cooperbench-eval"
version = "0.2.0"
description = "Automated failure mode classification for CooperBench multi-agent coding traces"
requires-python = ">=3.12"
dependencies = [
    "unidiff>=0.7.5",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[project.scripts]
cooperbench-eval = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
